Update .gitignore for IDE/OS coverage and mark related tasks complete

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,14 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Visual Studio Code
+.vscode/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# Windows/OS-specific
+Thumbs.db
+.DS_Store
