--- a/IdleSnitch.csproj
+++ b/IdleSnitch.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="assets\icon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
