Update icon references to icon-active-on.ico and remove icon.ico usage. Added new state icons.

--- a/IdleSnitch.csproj
+++ b/IdleSnitch.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="assets\icon.ico">
+    <None Update="assets\icon-active-on.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
