--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+# Ignore publish output
+publish/
+IdleSnitch-portable.zip
+
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
